# releases

./: .gitignore  Changelog.md  How To Install.md  readme.md
assets/: AddinFile.addin  README.md  TupeloWorkbench.addin  readme.txt
assets/Program/: eula.txt  readme.txt
installer/: .gitignore  Cargo.toml
installer/src/: background_thread.rs  custom_impls.rs  data.rs  eula.txt  gui.rs  install.rs  main.rs  self_update.rs  uninstall.rs  utils.rs
installer/src/operations/: get_revit_path.rs  install.rs  mod.rs  self_update.rs  uninstall.rs
installer/src/operations/uninstallers/: mod.rs  uninstall_format_1.rs  uninstall_format_2.rs  uninstall_format_3.rs
installer/src/settings/: addin_id.txt  addin_name.txt  addin_version.txt  assembly_name.txt  assets_url.txt  full_class_name.txt  installer_url.txt  vendor_description.txt
installer/src/uninstallers/: mod.rs  uninstall_format_1.rs  uninstall_format_2.rs  uninstall_format_3.rs
packager/: Cargo.toml
packager/src/: main.rs
packager/src/prepare_assets/: mod.rs  workhorse.rs  workvault.rs  workvision.rs
