[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = {version = "0.12.4", features = ["blocking"]}
self-replace = "1.3.7"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
smart-read = "0.6.2"
zip = "2.1.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
