[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
eframe = {version = "0.27.2", default-features = false, features = ["default_fonts", "glow"]}
egui = "0.27.2"
reqwest = {version = "0.12.4", features = ["blocking"]}
self-replace = "1.3.7"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
user32-sys = "0.2.0"
winapi = {version = "0.3.9", features = ["winuser"]}
zip = "2.1.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
