[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
eframe = {version = "0.28.1", default-features = false, features = ["default_fonts", "glow"]}
egui = "0.28.1"
self-replace = "1.4.0"
sysinfo = "0.31.3"
user32-sys = "0.2.0"
winapi = {version = "0.3.9", features = ["winuser"]}
zip = "2.2.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
